@@ -330,6 +330,8 @@ which is a flag to FUSE;
 however, the
 .Fl d
 FUSE flag implies this flag.
+.It Fl \-debug-http
+Enable printing of HTTP headers to standard output.
 .It Fl \-erase
 Completely erase the file system by deleting all non-zero blocks, and then exit.
 User confirmation is required unless the
