@@ -3,6 +3,7 @@ Version 1.2.2
 
     - Disable the MD5 cache when the `--readOnly' flag is given.
     - Make `--md5CacheTime=0' really mean `infinite' as promised in man page.
+    - Added `--debug-http' flag for debugging HTTP headers.
     - Don't let block and MD5 caches be configured larger than necessary.
     - Fixed a few minor issues with statistics reporting.
 
